--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/Paint.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Paint.data.br",
-        frameworkUrl: buildUrl + "/Paint.framework.js.br",
-        codeUrl: buildUrl + "/Paint.wasm.br",
+        dataUrl: buildUrl + "/Paint.data",
+        frameworkUrl: buildUrl + "/Paint.framework.js",
+        codeUrl: buildUrl + "/Paint.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Fusagasuga AR web",
